order/order-k8/k8_orderui_dep.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: orderui-deploy
  namespace: shoppingportal
spec:
  replicas: 3
  selector:
    matchLabels:
      name: orderui
      zone: prod
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        name: orderui
        version: "1.0.0"
        release: stable
        tier: fe
        zone: prod
        managed-by: m2
    spec:
      containers:
        - name: orderui-ctr
          image: metamagicglobal/orderui:k8 
          imagePullPolicy: Always
          ports:
          - containerPort: 80
