order/order-k8/order-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: orderms-deploy
  namespace: shoppingportal
spec:
  replicas: 1
  selector:
    matchLabels:
      name: orderms
      zone: prod
      app: orderms      
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        name: orderms
        version: v1
        release: stable
        tier: be
        zone: prod
        managed-by: m2
        app: orderms      
    spec:
      containers:
        - name: orderms-ctr
          image: metamagicglobal/orderservice_k8
          imagePullPolicy: Always
          ports:
          - containerPort: 8082
