order/order-k8/order-ms-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-svc
  namespace: shoppingportal
spec:
  selector: 
    app: orderms        
  ports:
  - protocol: TCP
    targetPort: 8082
    port: 80
    name: http
