order/order-k8/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-svc
  namespace: shoppingportal
spec:
  type: LoadBalancer
  selector: 
    name: orderms
  ports:
  - protocol: TCP
    targetPort: 8082
    port: 80
    name: http
