order/order-k8/order-ui-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: orderui-svc
  namespace: shoppingportal
  labels:
    name: orderuisvc
    app: orderui     
spec:
  selector:
        name: orderui
        version: "1.0.0"
        release: stable
        tier: fe
        zone: prod
        managed-by: m2
        app: orderui          
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: my-http-port
