order/order-k8/order-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-vs
  namespace: shoppingportal  
spec:
  gateways:
  - shoppingportal-gateway
  hosts:
   - "*"
  http:
  - match:
    - uri:
        prefix: /orderms
    route:
    - destination:
        host: order-svc.shoppingportal.svc.cluster.local
        port:
          number: 80
